<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >

    <Button
        android:id="@+id/newClaim_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/returnToMainButton"
        android:layout_alignLeft="@+id/textView1"
        android:layout_alignStart="@+id/textView1"
        android:layout_marginBottom="23dp"
        android:text="@string/new_claim_btn"/>

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:text="@string/app_name"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <Button
        android:id="@+id/returnToMainButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/button3"
        android:layout_alignEnd="@+id/textView1"
        android:layout_alignLeft="@+id/newClaim_btn"
        android:layout_alignRight="@+id/newClaim_btn"
        android:layout_alignStart="@+id/newClaim_btn"
        android:layout_marginBottom="27dp"
        android:text="@string/view_claim_btn" />

    <Button
        android:id="@+id/button3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/newClaim_btn"
        android:layout_alignLeft="@+id/returnToMainButton"
        android:layout_alignParentBottom="true"
        android:layout_alignRight="@+id/returnToMainButton"
        android:layout_alignStart="@+id/returnToMainButton"
        android:layout_marginBottom="36dp"
        android:text="@string/users_btn" />

</RelativeLayout>